@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: focus.test,v 1.6 2000/05/11 22:36:32 hobbs Exp $
+# RCS: @(#) $Id: focus.test,v 1.7 2001/03/28 17:27:10 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -572,7 +572,7 @@ test focus-6.1 {miscellaneous - embedded application in same process} \
     bind all <FocusOut> {lappend x "focus out %W %d"}
     interp create child
     child eval "set argv {-use [winfo id .t.f1]}"
-    load {} tk child
+    load {} Tk child
     child eval {
 	entry .e1 -bg lightBlue
 	pack .e1
