@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: macMenu.test,v 1.3 1999/04/16 01:51:39 stanton Exp $
+# RCS: @(#) $Id: macMenu.test,v 1.4 2001/03/28 17:27:10 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -852,7 +852,7 @@ test macMenu-21.3 {TkpSetMainMenubar - different interps} {
     catch {destroy .m1}
     catch {interp delete testinterp}
     interp create testinterp
-    load {} tk testinterp
+    load {} Tk testinterp
     menu .m1
     . configure -menu .m1
     raise .
