@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: unixEmbed.test,v 1.7 1999/04/21 21:53:30 rjohnson Exp $
+# RCS: @(#) $Id: unixEmbed.test,v 1.8 2001/03/28 17:27:10 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -550,7 +550,7 @@ test unixEmbed-8.2 {TkpClaimFocus procedure} {
     pack .f1 .f2
     interp create child
     child eval "set argv {-use [winfo id .f1]}"
-    load {} tk child
+    load {} Tk child
     child eval {
 	. configure -bd 2 -highlightthickness 2 -relief sunken
     }
