@@ -1,3 +1,13 @@
+2001-03-28  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/focus.test (focus-6.1):
+	* tests/macEmbed.testi (unixEmbed-5.1):
+	* tests/macMenu.test (macMenu-21.3):
+	* tests/menu.testi (menu-27.1):
+	* tests/unixEmbed.test (unixEmbed-8.2):
+	* tests/unixWm.testi (unixWm-50.4):  Replaced all [load {} tk]
+	in Tk test suite with [load {} Tk].  [Bug 220940, Patch 411952]
+
 2001-02-13  Eric Melski  <ericm@interwoven.com>
 
 	* doc/photo.n: [Bug 132213] Added clarification on interpretation
